--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 2
-        versionName "2.0"
+        versionName "2.0-RC1"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
