--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-		  package="ru.vlad805.timelapse">
+<manifest
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		package="ru.vlad805.timelapse">
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="android.permission.CAMERA"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
 	<uses-feature android:name="android.hardware.camera"/>
 	<uses-feature android:name="android.hardware.camera.autofocus"/>
@@ -13,12 +15,11 @@
 	<application
 			android:allowBackup="true"
 			android:icon="@mipmap/ic_launcher"
-			android:label="@string/app_name"
-			android:roundIcon="@mipmap/ic_launcher_round"
+			android:label="@string/applicationName"
 			android:supportsRtl="true"
-			android:theme="@style/Theme.AppCompat" android:fullBackupContent="false">
+			android:fullBackupContent="false">
 
-		<activity android:name=".MainActivity">
+		<activity android:name=".MainActivity" android:theme="@style/Theme.AppCompat">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
@@ -27,14 +28,11 @@
 
 		<activity
 				android:name=".TimeLapseActivity"
-				android:label="@string/app_name"
+				android:label="@string/applicationName"
 				android:screenOrientation="portrait"
 				android:configChanges="orientation|keyboardHidden"
 				android:theme="@style/Theme.AppCompat.NoActionBar" />
 
-		<activity
-				android:name=".SettingsActivity"
-				android:label="@string/title_activity_settings" />
 	</application>
 
 </manifest>
