--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.FLASHLIGHT"/>
 	<uses-permission android:name="android.permission.BATTERY_STATS" />
 
-	<uses-feature android:name="android.hardware.camera"/>
+	<uses-feature android:name="android.hardware.camera" android:required="true" />
 	<uses-feature android:name="android.hardware.camera.autofocus"/>
 	<uses-feature android:name="android.hardware.camera.flash" />
 
