--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0-beta01'
     implementation 'com.android.support:support-vector-drawable:28.0.0-beta01'
     implementation 'com.android.support:design:28.0.0-beta01'
+
+    implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
 }
