--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,41 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
 		package="ru.vlad805.timelapse">
 
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="android.permission.CAMERA"/>
+	<uses-permission
+			android:name="android.permission.WRITE_SETTINGS"
+			tools:ignore="ProtectedPermissions"/>
 	<uses-permission android:name="android.permission.FLASHLIGHT"/>
-	<uses-permission android:name="android.permission.BATTERY_STATS" />
+	<uses-permission
+			android:name="android.permission.BATTERY_STATS"
+			tools:ignore="ProtectedPermissions"/>
 
-	<uses-feature android:name="android.hardware.camera" android:required="true" />
+	<uses-feature
+			android:name="android.hardware.camera"
+			android:required="true"/>
 	<uses-feature android:name="android.hardware.camera.autofocus"/>
-	<uses-feature android:name="android.hardware.camera.flash" />
+	<uses-feature android:name="android.hardware.camera.flash"/>
 
 	<application
 			android:allowBackup="true"
+			android:fullBackupContent="false"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/applicationName"
-			android:supportsRtl="true"
-			android:fullBackupContent="false">
-
-		<activity android:name=".activity.MainActivity" android:theme="@style/Theme.AppCompat">
+			android:supportsRtl="true">
+		<activity
+				android:name=".activity.MainActivity"
+				android:theme="@style/Theme.AppCompat">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
+
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
-
 		<activity
 				android:name=".activity.TimeLapseActivity"
+				android:configChanges="orientation|keyboardHidden"
 				android:label="@string/applicationName"
 				android:screenOrientation="portrait"
-				android:configChanges="orientation|keyboardHidden"
-				android:theme="@style/Theme.AppCompat.NoActionBar" />
-
+				android:theme="@style/Theme.AppCompat.NoActionBar"/>
+		<activity android:name=".activity.TestActivity" android:theme="@style/Theme.AppCompat">
+		</activity>
 	</application>
 
 </manifest>
