--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:28.0.0-beta01'
     implementation 'com.android.support:design:28.0.0-beta01'
 
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
+
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
 }
