--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 	<uses-permission
 			android:name="android.permission.BATTERY_STATS"
 			tools:ignore="ProtectedPermissions"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 	<uses-feature
 			android:name="android.hardware.camera"
