--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0-beta01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:support-v4:28.0.0-beta01'
-    implementation 'com.android.support:support-vector-drawable:28.0.0-beta01'
-    implementation 'com.android.support:design:28.0.0-beta01'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    implementation 'com.android.support:support-vector-drawable:28.0.0-rc01'
+    implementation 'com.android.support:design:28.0.0-rc01'
 
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
+    implementation 'com.asksira.android:cameraviewplus:0.9.5'
 
     implementation 'com.github.hotchemi:permissionsdispatcher:3.1.0'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.1.0'
